apps/jellyfin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  hostnames:
    - jellyfin.tomasmerino.com
  parentRefs:
    - name: homelab-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
